--- a/src/css/components/_resources.scss
+++ b/src/css/components/_resources.scss
@@ -1,25 +1,89 @@
 .rds-resources {
   margin-top: 75px;
   padding: 80px 0 85px;
-  border-radius: 10px;
+  border-radius: 10px 10px 0 0;
   background-color: $primary-blue;
 
+  @include mobile {
+    margin-top: 59px;
+    padding: 54px 0 53px;
+  }
+
   .articles {
-    margin-top: 77px;
+    &:not(:first-child) {
+      margin-top: 77px;
+
+      @include mobile {
+        margin-top: 52px;
+      }
+    }
+
+    .slick-list {
+      margin: -10px 0;
+    }
+
+    .slick-track {
+      display: flex;
+      padding: 10px 0;
+    }
+
+    .slick-slide {
+      height: auto;
+
+      >div {
+        height: 100%;
+
+        >.col {
+          padding: 0 12.5px;
+          height: 100%;
+        }
+      }
+    }
+
+    .slick-dots {
+      display: flex !important;
+      justify-content: center;
+      bottom: -15px;
+
+      li {
+        margin: 0 6px;
+        width: auto;
+        height: auto;
+
+        button {
+          margin: 0;
+          padding: 0;
+          width: 8px;
+          height: 8px;
+          border-radius: 100%;
+          background-color: $white;
+          transition: background-color .2s ease-in-out;
+
+          &:before {
+            display: none;
+          }
+        }
+
+        &.slick-active {
+          button {
+            background-color: $red;
+          }
+        }
+      }
+    }
 
     .article {
       position: relative;
       height: 100%;
-      transition: transform .2s ease-in-out;
 
       &:hover {
-        transform: translateY(-5px);
-
         &:before {
+          top: 5px;
           opacity: 1;
         }
 
         .article-wrapper {
+          top: -5px;
           box-shadow: 12px 11px 6px rgba($primary-black, .17);
         }
       }
@@ -33,16 +97,21 @@
         opacity: 0;
         border-radius: 10px;
         background-color: $purple;
-        transition: opacity .2s ease-in-out;
+        transition: top .2s ease-in-out, opacity .2s ease-in-out;
         content: '';
+
+        @include mobile {
+          border-radius: 8px;
+        }
       }
 
       .article-wrapper {
         display: flex;
         flex-direction: column;
         position: relative;
+        top: 0;
         height: 100%;
-        transition: box-shadow .2s ease-in-out;
+        transition: top .2s ease-in-out, box-shadow .2s ease-in-out;
       }
 
       .thumb {
@@ -51,6 +120,11 @@
         height: 187px;
         object-fit: cover;
         border-radius: 10px 10px 0 0;
+
+        @include mobile {
+          height: 151px;
+          border-radius: 8px 8px 0 0;
+        }
       }
 
       .article-body {
@@ -58,6 +132,11 @@
         padding: 20px 25px 25px;
         border-radius: 0 0 10px 10px;
         background-color: $white;
+
+        @include mobile {
+          padding: 15px 19px 16px;
+          border-radius: 0 0 8px 8px;
+        }
 
         .type {
           display: block;
@@ -67,6 +146,10 @@
           font-size: 14.5px;
           font-weight: 900;
           color: $red;
+
+          @include mobile {
+            font-size: 13px;
+          }
         }
 
         .title {
@@ -75,8 +158,16 @@
           font-size: 18px;
           font-weight: 600;
 
+          @include mobile {
+            font-size: 16px;
+          }
+
           &:not(:first-child) {
             margin-top: 4px;
+
+            @include mobile {
+              margin-top: 3px;
+            }
           }
         }
       }
@@ -98,6 +189,10 @@
     margin-top: 55px;
     text-align: center;
 
+    @include mobile {
+      margin-top: 50px;
+    }
+
     .btn {
       display: inline-block;
       padding: 11px 32px 12px;
@@ -109,6 +204,12 @@
       font-size: 14px;
       font-weight: 700;
       color: $white;
+      transition: background-color .2s ease-in-out, color .2s ease-in-out;
+
+      &:hover {
+        background-color: $white;
+        color: $red;
+      }
     }
   }
 }
