--- a/src/css/components/_demos.scss
+++ b/src/css/components/_demos.scss
@@ -2,6 +2,10 @@
   position: relative;
   padding-top: 68px;
 
+  @include mobile {
+    padding-top: 46px;
+  }
+
   .container {
     position: relative;
 
@@ -16,6 +20,10 @@
 
     &:not(:first-child) {
       margin-top: 75px;
+
+      @include mobile {
+        margin-top: 34px;
+      }
     }
 
     .code {
@@ -25,6 +33,14 @@
       height: 477.5px;
       user-select: none;
     }
+
+    .col {
+      &:not(:last-child) {
+        @include mobile {
+          margin-bottom: 45px;
+        }
+      }
+    }
   }
 
   .terminal {
@@ -32,7 +48,9 @@
     position: relative;
 
     &.right {
-      margin-top: 60px;
+      @include desktop-tablet {
+        margin-top: 60px;
+      }
     }
 
     .terminal-header {
@@ -41,11 +59,19 @@
       border-radius: 10px 10px 0 0;
       background-color: $secondary-black;
 
+      @include mobile {
+        height: 31px;
+      }
+
       svg {
         position: absolute;
         top: 50%;
         left: 17px;
         transform: translateY(-50%);
+
+        @include mobile {
+          zoom: .85;
+        }
       }
     }
 
@@ -57,10 +83,19 @@
       border-top: none;
       background-color: $white;
 
+      @include mobile {
+        padding: 31px 25px 35px;
+        min-height: 220px;
+      }
+
       .title {
         margin: 0;
         line-height: 1;
         font-size: 26px;
+
+        @include mobile {
+          font-size: 22px;
+        }
       }
 
       .links {
@@ -69,8 +104,16 @@
         list-style: none;
         line-height: 1.45;
 
+        @include mobile {
+          font-size: 15px;
+        }
+
         &:not(:first-child) {
           margin-top: 30px;
+
+          @include mobile {
+            margin-top: 24px;
+          }
         }
 
         li {
