--- a/src/css/components/_footer.scss
+++ b/src/css/components/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
+  position: relative;
   padding: 0;
-  border-radius: 10px;
+  overflow: hidden;
   background-color: $primary-black;
 
   .container {
@@ -8,10 +9,19 @@
     padding-top: 50px;
     padding-bottom: 38px;
 
+    @include mobile {
+      padding-top: 47px;
+      padding-bottom: 44px;
+    }
+
     .shape {
       position: absolute;
       bottom: 0;
       left: -533px;
+
+      @include mobile {
+        display: none;
+      }
     }
 
     .code {
@@ -20,6 +30,12 @@
       right: -145px;
       height: 338px;
       user-select: none;
+
+      @include mobile {
+        zoom: .8;
+        top: 15px;
+        right: -55px;
+      }
     }
 
     .row {
@@ -40,19 +56,45 @@
     line-height: 1.25;
     font-size: 14.5px;
     font-weight: 600;
+
+    @include tablet-mobile {
+      margin-bottom: 22px;
+    }
   }
 
   &__links {
     margin-bottom: 0;
+
+    @include tablet-mobile {
+      margin-top: 45px;
+    }
+  }
+
+  &__col {
+    margin-bottom: 0 !important;
+
+    @include tablet {
+      --ifm-col-width: 33.33% !important;
+    }
+
+    @include mobile {
+      --ifm-col-width: 50% !important;
+    }
   }
 
   &__items {
-    max-width: 168px;
+    @include desktop {
+      max-width: 168px;
+    }
   }
 
   &__item {
     &:not(:first-child) {
       margin-top: 3px;
+
+      @include tablet-mobile {
+        margin-top: 15px;
+      }
     }
   }
 
@@ -76,5 +118,9 @@
     line-height: 1.25;
     font-size: 12px;
     color: $grey;
+
+    @include tablet-mobile {
+      margin-top: 42px;
+    }
   }
 }
