--- a/src/css/components/_hero.scss
+++ b/src/css/components/_hero.scss
@@ -5,8 +5,24 @@
   background-color: $primary-blue;
   color: $white;
 
+  @include mobile {
+    padding: 71px 0 62px;
+  }
+
   .row {
     align-items: center;
+
+    .col {
+      @include tablet-mobile {
+        &:first-child {
+          order: 2;
+        }
+
+        &:last-child {
+          order: 1;
+        }
+      }
+    }
   }
 
   .hero-title {
@@ -14,6 +30,15 @@
     line-height: 1.1;
     font-size: 50px;
     font-weight: 500;
+
+    @include tablet-mobile {
+      text-align: center;
+    }
+
+    @include mobile {
+      line-height: 1.25;
+      font-size: 32px;
+    }
   }
 
   .hero-subtitle {
@@ -21,11 +46,25 @@
     line-height: 1.5;
     font-size: 18px;
     font-weight: 400;
+
+    @include tablet-mobile {
+      text-align: center;
+    }
+
+    @include mobile {
+      margin-top: 13px;
+      font-size: 14px;
+    }
   }
 
   .boxes {
     display: flex;
     margin-top: 42px;
+
+    @include mobile {
+      flex-direction: column;
+      margin-top: 36px;
+    }
 
     .box {
       flex: 1;
@@ -34,12 +73,23 @@
       border-radius: 3px;
       transition: background-color .2s ease-in-out;
 
+      @include mobile {
+        margin: 0 auto;
+        max-width: 282px;
+      }
+
       &:hover {
         background-color: $red;
       }
 
       &:not(:first-child) {
-        margin-left: 12px;
+        @include desktop-tablet {
+          margin-left: 12px;
+        }
+
+        @include mobile {
+          margin-top: 25px;
+        }
       }
 
       .bg {
@@ -67,31 +117,63 @@
         align-items: center;
         padding: 5px 21px 0;
         height: 69px;
+
+        @include mobile {
+          justify-content: center;
+        }
+
+        svg {
+          @include mobile {
+            zoom: 1.1;
+          }
+        }
       }
 
       .text {
         padding: 0 16px 23px 21px;
+
+        @include mobile {
+          padding-bottom: 25px;
+        }
 
         .title {
           margin: 0;
           line-height: 1.5;
           font-size: 18px;
           font-weight: 400;
+
+          @include mobile {
+            text-align: center;
+            line-height: 1.2;
+            font-size: 22px;
+          }
         }
 
         .description {
           margin: 5px 0 0 0;
           line-height: 1.5;
           font-size: 14.5px;
+
+          @include mobile {
+            margin-top: 10px;
+            text-align: center;
+            line-height: 1.6;
+            font-size: 16px;
+          }
         }
 
         .more {
           display: flex;
           align-items: center;
-          margin-top: 9px;
+          margin-top: 14px;
           line-height: 1.2;
           font-size: 14.5px;
           font-weight: 700;
+
+          @include mobile {
+            justify-content: center;
+            font-size: 16px;
+          }
 
           svg {
             margin-left: 8px;
@@ -121,8 +203,16 @@
   }
 
   .illustration {
-    display: block;
-    margin-left: 66px;
     max-width: 100%;
+
+    @include desktop {
+      margin-left: 66px;
+    }
+
+    @include tablet-mobile {
+      display: block;
+      margin: 0 auto 48px;
+      zoom: 0.48;
+    }
   }
 }
