--- a/src/css/_article.scss
+++ b/src/css/_article.scss
@@ -187,6 +187,11 @@ main:not(.home-main) {
       font-size: 16px;
     }
   }
+
+  >img,
+  >p>img {
+    box-shadow: 0 2px 20px rgba($black, .17);
+  }
 }
 
 .admonition {
