--- a/src/css/components/_resources.scss
+++ b/src/css/components/_resources.scss
@@ -115,11 +115,14 @@
       }
 
       .thumb {
+        z-index: 2;
+        position: relative;
         display: block;
         width: 100%;
         height: 187px;
         object-fit: cover;
         border-radius: 10px 10px 0 0;
+        box-shadow: 0px 2px 4px rgba(183, 183, 183, .5);
 
         @include mobile {
           height: 151px;
