--- a/src/css/components/_navbar.scss
+++ b/src/css/components/_navbar.scss
@@ -51,8 +51,8 @@
 
   &__brand,
   &__logo {
-    width: 171px !important;
-    height: 26px !important;
+    width: 168px !important;
+    height: auto !important;
   }
 
   &__link {
