--- a/src/css/components/_footer.scss
+++ b/src/css/components/_footer.scss
@@ -48,7 +48,8 @@
     display: block;
     margin: -3px 0 0 0;
     max-width: none;
-    height: 31px;
+    width: 201px;
+    height: auto;
   }
 
   &__title {
