--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -19,6 +19,7 @@
 @import './components/languages';
 @import './components/demos';
 @import './components/resources';
+@import './components/404';
 
 
 /* You can override the default Infima variables here. */
