homepage hero spacing on ipad

--- a/src/css/components/_hero.scss
+++ b/src/css/components/_hero.scss
@@ -5,6 +5,11 @@
   background-color: $primary-blue;
   color: $white;
 
+  @media only screen and (min-width: 997px) and (max-width: 1100px) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
   @include mobile {
     padding: 71px 0 62px;
   }
@@ -177,6 +182,7 @@
 
           svg {
             margin-left: 8px;
+            flex: 0 0 14px;
 
             path {
               transition: fill .2s ease-in-out;
@@ -208,6 +214,10 @@
 
     @include desktop {
       margin-left: 66px;
+    }
+
+    @media only screen and (min-width: 997px) and (max-width: 1100px) {
+      margin-left: 51px;
     }
 
     @include tablet-mobile {
