mobile nav background change

--- a/src/css/components/_navbar.scss
+++ b/src/css/components/_navbar.scss
@@ -1,9 +1,9 @@
 .navbar-sidebar--show .navbar-sidebar {
-  box-shadow: 0 5px 40px rgba($primary-blue, .5);
+  box-shadow: 0 5px 40px rgba($primary-black, .5);
 }
 
 .navbar-sidebar {
-  background-color: $primary-blue;
+  background-color: $primary-black;
   box-shadow: none;
 
   &__backdrop {
