Fix styling on home page search bar

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -18,6 +18,7 @@
 @import './components/hero';
 @import './components/languages';
 @import './components/demos';
+@import './components/search';
 @import './components/resources';
 @import './components/404';
 
