--- a/static/css/redis-sitesearch-overrides.css
+++ b/static/css/redis-sitesearch-overrides.css
@@ -18,6 +18,10 @@
   width: 65%;
 }
 
+.redis-sitesearch-inline .search-root-item {
+  padding: 12px 16px 0px;
+}
+
 .redis-sitesearch-inline .redis-sitesearch-result {
   padding: 11px 1em 11px 11px;
 }
