--- a/src/css/_typography.scss
+++ b/src/css/_typography.scss
@@ -9,6 +9,8 @@ h6 {
 
 // section-title
 .section-title {
+  z-index: 2;
+  position: relative;
   margin: 0;
   text-align: center;
   line-height: 1.15;
@@ -17,6 +19,10 @@ h6 {
 
   @include mobile {
     font-size: 32px;
+  }
+
+  @include dark {
+    color: $white;
   }
 
   &.white {
@@ -42,6 +48,10 @@ h6 {
   @include mobile {
     line-height: 1.6;
     font-size: 16px;
+  }
+
+  @include dark {
+    color: $white;
   }
 
   &:not(:first-child) {
