--- a/static/css/redis-sitesearch-overrides.css
+++ b/static/css/redis-sitesearch-overrides.css
@@ -3,12 +3,26 @@
 }
 
 .redis-sitesearch {
-  margin-top: 14px;
-  margin-left: auto;
-  margin-right: auto;
   max-width: 700px;
+  min-width: 350px
 }
 
+.redis-sitesearch-input {
+  padding: 5px 5px 5px 48px
+}
+
+redis-sitesearch-result-list-wrapper {
+  width: 400px
+}
+
+.redis-sitesearch-inline {
+  margin-bottom: 0
+}
+
+
+.redis-sitesearch-inline .search-left {
+  width: 35%;
+}
 
 .redis-sitesearch-inline .search-left {
   width: 35%;
@@ -25,3 +39,68 @@
 .redis-sitesearch-inline .redis-sitesearch-result {
   padding: 11px 1em 11px 11px;
 }
+
+
+
+.redis-sitesearch .redis-sitesearch-result-list {
+  max-height: 60vh;
+}
+
+.redis-sitesearch-inline .redis-sitesearch-result-list {
+  max-height: 70vh;
+}
+
+@media screen and (max-width: 376px) {
+  .redis-sitesearch .redis-sitesearch-result-list {
+      max-height: 40vh;
+  }
+
+  .redis-sitesearch-inline .redis-sitesearch-result-list  {
+      max-height: 70vh;
+  }
+
+  .search-left {
+      width: 30%;
+  }
+
+  .search-right {
+      width: 70%;
+  }
+
+  .redis-sitesearch-result {
+      padding: 9px 1.5em 9px 9px;
+  }
+
+  .redis-sitesearch {
+    min-width: 300px;
+  }
+
+}
+
+@media screen and (max-width: 608px) {
+  .redis-sitesearch {
+    min-width: 100%;
+    margin-right: 15px
+    margin-left: 15px
+  }
+}
+
+
+
+
+@media screen and (max-height: 750px) {
+  .redis-sitesearch .redis-sitesearch-result-list {
+      max-height: 50vh;
+  }
+
+  .redis-sitesearch-inline .redis-sitesearch-result-list  {
+      max-height: 70vh;
+  }
+
+  .redis-sitesearch {
+    margin-top: 10px;
+    min-width: 300px;
+    margin-right: 15px
+  }
+}
+
