Add a higher-res powered-by-redisearch image

--- a/static/css/redis-sitesearch-overrides.css
+++ b/static/css/redis-sitesearch-overrides.css
@@ -1,5 +1,6 @@
 .powered-by-redisearch {
    background-image: url('/static/img/redisearch.png');
+   background-size: 173px 29px
  }
 
  .redis-sitesearch {
