Better search image

--- a/static/css/redis-sitesearch-overrides.css
+++ b/static/css/redis-sitesearch-overrides.css
@@ -1,5 +1,5 @@
 .powered-by-redisearch {
-   background-image: url('/static/img/redisearch.png');
+   background-image: url('/img/redisearch.png');
    background-size: 173px 29px
  }
 
