--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -17,6 +17,7 @@
 @import './components/footer';
 @import './components/hero';
 @import './components/languages';
+@import './components/launchpad';
 @import './components/demos';
 @import './components/resources';
 @import './components/404';
