--- a/src/theme/DocItem/styles.module.css
+++ b/src/theme/DocItem/styles.module.css
@@ -30,3 +30,10 @@
 .docLastUpdatedAt {
   font-weight: bold;
 }
+
+.authorProfileImage {
+  border-radius: 5px;
+  border: 2px;
+  border-style: solid;
+  border-color: #ff0000;
+}
