--- a/src/css/components/_announcement.scss
+++ b/src/css/components/_announcement.scss
@@ -65,6 +65,7 @@
     display: flex;
     align-items: center;
     position: absolute;
+    color: #fff;
     top: 0;
     right: 0;
     padding: 0 14px;
