adding landing page for learn to earn, adding sitemap

--- a/src/css/_config.scss
+++ b/src/css/_config.scss
@@ -21,6 +21,8 @@ $roboto: 'Roboto Mono',
 monospace;
 
 :root {
+  --chill: #e3ebed;
+  --ui: #dfdfdf;
   --primary-blue: #161F31;
   --secondary-blue: #0565FF;
   --red: #DC382C;
@@ -32,6 +34,7 @@ monospace;
   --grey: #707070;
   --grey-light: #E0DFDF;
   --grey-dark: #C2C0C0;
+  --violet: #3e41a0;
   --purple: #5961FF;
   --purple-hover: #3F41A0;
   --purple-light: #F2F5FE;
