--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -21,7 +21,7 @@
 @import './components/demos';
 @import './components/resources';
 @import './components/404';
-
+@import './components/marketo';
 
 /* You can override the default Infima variables here. */
 :root {
@@ -43,7 +43,7 @@
   --ifm-global-radius: 10px;
 }
 
-html[data-theme="dark"] {
+html[data-theme='dark'] {
   --ifm-background-color: var(--primary-black);
 }
 
