adding thank-you page, allowing landing pages to not be squeeze/form pages, adding jwt thank you data

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -54,3 +54,12 @@ html[data-theme='dark'] {
 .home-main {
   overflow: hidden;
 }
+
+.card-link {
+  color: var(--primary-black) !important;
+  text-decoration: none !important;
+
+  :hover, :active, :visited, :focus {
+    text-decoration: none;
+  }
+}
