fixes #202, text is visible in light and dark mode for tables, breadcrumbs, blockquotes, and tabs

--- a/src/css/_article.scss
+++ b/src/css/_article.scss
@@ -36,7 +36,10 @@ html[data-theme="dark"] {
   --ifm-menu-color-background-hover: #181D27;
   --ifm-toc-border-color: #676768;
   --ifm-toc-link-color: var(--white);
+  --ifm-tabs-color: var(--white);
   --ifm-code-color: var(--white);
+  --ifm-table-cell-color: var(--white);
+  --ifm-blockquote-color: var(--white);
 }
 
 hr {
