--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -63,8 +63,13 @@ html[data-theme='dark'] {
 
   > a {
     display: inline-block;
-    width:100%;
+    width: 100%;
     text-decoration: none !important;
     font-size: 1rem;
   }
+}
+
+.cst-large-code code {
+  width: 450px;
+  white-space: pre-wrap;
 }
